# backend/src/roots_of_rhythm/entrypoints/api.py
@@ -9,6 +9,7 @@ from roots_of_rhythm.config import settings as default_settings
 from roots_of_rhythm.discovery.presentation.genres import create_genres_router
 from roots_of_rhythm.discovery.presentation.groups import create_groups_router
 from roots_of_rhythm.discovery.presentation.performers import create_performers_router
+from roots_of_rhythm.discovery.presentation.recordings import create_recordings_router
 from roots_of_rhythm.discovery.presentation.songs import create_songs_router
 from roots_of_rhythm.entrypoints.dependencies import DependencyProviders, create_api_dependencies
 from roots_of_rhythm.infrastructure.database import (
@@ -49,6 +50,7 @@ def create_app(
             create_performers_router(),
             create_groups_router(),
             create_songs_router(),
+            create_recordings_router(),
         ],
         dependencies=create_api_dependencies(session_factory, dependency_overrides),
         lifespan=[database_lifespan],
